Add react-native-shared-group-preferences to iOS Podfile

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,7 @@ prepare_react_native_project!
 
 target 'LoveWidgets' do
   use_expo_modules!
+  pod 'RNReactNativeSharedGroupPreferences', :path => '../node_modules/react-native-shared-group-preferences'
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
