--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>843832822074-q5ugqh37h94db9t0av7fbgjiiborjb4e.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.843832822074-q5ugqh37h94db9t0av7fbgjiiborjb4e</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC9PBmDghpygVj7Gl9qdbA7Fw_WKOVxrQg</string>
 	<key>GCM_SENDER_ID</key>
