--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.25",
+    "expo-apple-authentication": "^8.0.8",
     "expo-clipboard": "^8.0.7",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
@@ -40,6 +42,7 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.9",
+    "expo-notifications": "^0.32.15",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
